--- a/index.html
+++ b/index.html
@@ -134,18 +134,18 @@
       </div>
     </div>
     <div class="head">
-      <a href="C:\Users\alok2\OneDrive\Desktop\Website\Website.html">
-        <img align="left" id="a" src="C:\Users\alok2\OneDrive\Desktop\Website\Images\B.png" alt="Logo" height="70px"
+      <a href="index.html">
+        <img align="left" id="a" src="B.png" alt="Logo" height="70px"
           width="70px">
       </a>
       <h1>Ideabox</h1>
     </div>
     <div class="nav" style="position: relative;">
       <a href="#Home"> Home</a>
-      <a href="C:\Users\alok2\OneDrive\Desktop\Website\Furnitures.html"> Furniture </a>
+      <a href="Furnitures.html"> Furniture </a>
       <a href="#About Us"> About Us </a>
       <a href="#Contact"> Contact Us </a>
-      <a href="C:\Users\alok2\OneDrive\Desktop\Website\faq.html">FAQ</a>
+      <a href="faq.html">FAQ</a>
     </div>
 
     <div class="section" id="Home">
@@ -156,10 +156,10 @@
 
       <div class="img-block">
         <img src="https://www.ulcdn.net/media/Slideshow/Dining-slideshow-3_Extra.jpg?1676291502" class="img1">
-        <img src="file:///C:/Users/alok2/OneDrive/Desktop/Website/Images/Worktables.png" class="img2">
+        <img src="Worktables.png" class="img2">
         <b id="Furniture"></b>
         <img src="https://m.media-amazon.com/images/I/61tV07vXkIL._SX522_.jpg" class="img2">
-        <img src="C:\Users\alok2\OneDrive\Desktop\Website\Images\furn.png" class="img2">
+        <img src="furn.png" class="img2">
       </div>
 
 
@@ -168,10 +168,10 @@
       <br>
       <br>
     
-      <img src="C:\Users\alok2\OneDrive\Desktop\Website\Images\iblogo.png" height="50px" width="50px"
+      <img src="iblogo.png" height="50px" width="50px"
         style="position:absolute;margin-left: 140px; margin-top: 0px;;">
         <h4 style="color: #2e2c2c; margin-left: 300px;">About us</h4>
-      <a href="C:\Users\alok2\OneDrive\Desktop\Website\profcard.html" class="Link" style="color: #3d3b3b; margin-left: 300px;">About us</a>
+      <a href="profcard.html" class="Link" style="color: #3d3b3b; margin-left: 300px;">About us</a>
       <h4>Contact us</h4>
       <a href="#">Contact us</a>
       <h4>FAQ</h4>
