--- a/Furnitures.html
+++ b/Furnitures.html
@@ -114,16 +114,16 @@
       </div>
       </div>
     <div class="head">
-      <a href="C:\Users\alok2\OneDrive\Desktop\Website\Website.html">
-      <img align="left" id="a" src="C:\Users\alok2\OneDrive\Desktop\Website\Images\B.png"alt="Logo" height="70px" width="70px">
+      <a href="Index.html">
+      <img align="left" id="a" src="B.png"alt="Logo" height="70px" width="70px">
       </a>
       <h1>Ideabox</h1>
     </div><div class="nav">
-      <a href="file:///C:/Users/alok2/OneDrive/Desktop/Website/Website.html"> Home</a>
+      <a href="Index.html"> Home</a>
       <a href="#Furniture">     Furniture        </a>
-      <a href="C:\Users\alok2\OneDrive\Desktop\Website\profcard.html">      About Us       </a>
+      <a href="profcard.html">      About Us       </a>
       <a href="#Contact">        Contact Us    </a>
-      <a href="C:\Users\alok2\OneDrive\Desktop\Website\faq.html">FAQ</a>
+      <a href="faq.html">FAQ</a>
     </div>
 
     <div class="section" id="Home">
@@ -133,11 +133,11 @@
       <h2 style="font-size:xx-large;">Here are the furnitures that we present</h2>
 
     <div class ="img-block">
-      <img src="C:\Users\alok2\OneDrive\Desktop\Website\Images\tables.png" class="img2"id="Furniture">
-      <img src="C:\Users\alok2\OneDrive\Desktop\Website\Images\storage shelfs.png"class="img2">
+      <img src="tables.png" class="img2"id="Furniture">
+      <img src="storage shelfs.png"class="img2">
       <b ></b>
-      <img src="file:///C:/Users/alok2/OneDrive/Desktop/Website/Images/Arrivals.png" class="img2" >
-      <img src="file:///C:/Users/alok2/OneDrive/Desktop/Website/Images/sofas.png" class="img2">
+      <img src="Arrivals.png" class="img2" >
+      <img src="sofas.png" class="img2">
     </div>
    
     <!-- <h2 style="text-align:right;margin-right: 40px;">User Profile Card</h2>
