--- a/Furnitures.html
+++ b/Furnitures.html
@@ -114,12 +114,12 @@
       </div>
       </div>
     <div class="head">
-      <a href="Index.html">
+      <a href="index.html">
       <img align="left" id="a" src="B.png"alt="Logo" height="70px" width="70px">
       </a>
       <h1>Ideabox</h1>
     </div><div class="nav">
-      <a href="Index.html"> Home</a>
+      <a href="index.html"> Home</a>
       <a href="#Furniture">     Furniture        </a>
       <a href="profcard.html">      About Us       </a>
       <a href="#Contact">        Contact Us    </a>
