--- a/profcard.html
+++ b/profcard.html
@@ -62,19 +62,19 @@
 
 <body>
   <div class="head">
-    <a href="C:\Users\alok2\OneDrive\Desktop\Website\Website.html">
-    <img align="left" id="a" src="C:\Users\alok2\OneDrive\Desktop\Website\Images\B.png"alt="Logo" height="70px" width="70px">
+    <a href="index.html">
+    <img align="left" id="a" src="B.png"alt="Logo" height="70px" width="70px">
     </a>
     <h1>Ideabox</h1>
   </div><div class="nav">
-    <a href="file:///C:/Users/alok2/OneDrive/Desktop/Website/Website.html"> Home</a>
-    <a href="C:\Users\alok2\OneDrive\Desktop\Website\Furnitures.html">     Furniture        </a>
+    <a href="index.html"> Home</a>
+    <a href="Furnitures.html">     Furniture        </a>
     <a href="#">      About Us       </a>
     <a href="#Contact">        Contact Us    </a>
-    <a href="C:\Users\alok2\OneDrive\Desktop\Website\faq.html">FAQ</a>
+    <a href="faq.html">FAQ</a>
   </div>
   <div>
-    <img src="C:\Users\alok2\OneDrive\Desktop\Website\Images\iblogo3.png"
+    <img src="iblogo3.png"
       style="position:absolute;height:200px; width:200px;"></a>
     <br>
     <br>
@@ -113,7 +113,7 @@
 
   </div>
   <div class="card">
-     <img src="Images/alok.png.jpg" alt="ALOK" style="width:10%; margin-top: 0px;width:30%;height: 30%;"><!--PUT your image here -->
+     <img src="alok.png.jpg" alt="ALOK" style="width:10%; margin-top: 0px;width:30%;height: 30%;"><!--PUT your image here -->
     <h1
       style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
       Alok Prakash</h1>
