--- a/index.html
+++ b/index.html
@@ -109,16 +109,6 @@
       position: fixed;
       background-color: #ffd166;
     }
-
-    #abc {
-      background-color: rgb(211, 211, 211);
-      font-size: small;
-      position: relative;
-
-    }
-
-
-
     /* @media  */
   </style>
 <body>
@@ -143,8 +133,8 @@
     <div class="nav" style="position: relative;">
       <a href="#Home"> Home</a>
       <a href="Furnitures.html"> Furniture </a>
-      <a href="#About Us"> About Us </a>
-      <a href="#Contact"> Contact Us </a>
+      <a href="profcard.html"> About Us </a>
+      <a href="contact.html"> Contact Us </a>
       <a href="faq.html">FAQ</a>
     </div>
 
@@ -161,27 +151,6 @@
         <img src="https://m.media-amazon.com/images/I/61tV07vXkIL._SX522_.jpg" class="img2">
         <img src="furn.png" class="img2">
       </div>
-
-
-    </div>
-    <div id="abc"><!--LINK FOR ABOUT US-->
-      <br>
-      <br>
-    
-      <img src="iblogo.png" height="50px" width="50px"
-        style="position:absolute;margin-left: 140px; margin-top: 0px;;">
-        <h4 style="color: #2e2c2c; margin-left: 300px;">About us</h4>
-      <a href="profcard.html" class="Link" style="color: #3d3b3b; margin-left: 300px;">About us</a>
-      <h4>Contact us</h4>
-      <a href="#">Contact us</a>
-      <h4>FAQ</h4>
-      <a href="#">FAQK</a>
-      <br>
-      <br>
-      <hr>
-      <p style="font-size: smaller;"></p>
-    </div>
-
   </div>
   <div class="footer">
 
