--- a/Furnitures.html
+++ b/Furnitures.html
@@ -122,7 +122,7 @@
       <a href="index.html"> Home</a>
       <a href="#Furniture">     Furniture        </a>
       <a href="profcard.html">      About Us       </a>
-      <a href="#Contact">        Contact Us    </a>
+      <a href="contact.html">        Contact Us    </a>
       <a href="faq.html">FAQ</a>
     </div>
 
