--- a/profcard.html
+++ b/profcard.html
@@ -70,7 +70,7 @@
     <a href="index.html"> Home</a>
     <a href="Furnitures.html">     Furniture        </a>
     <a href="#">      About Us       </a>
-    <a href="#Contact">        Contact Us    </a>
+    <a href="contact.html">        Contact Us    </a>
     <a href="faq.html">FAQ</a>
   </div>
   <div>
