--- a/faq.html
+++ b/faq.html
@@ -77,18 +77,18 @@
 
 <body>
 	<div class="head">
-		<a href="C:\Users\alok2\OneDrive\Desktop\Website\Website.html">
+		<a href="index.html">
 			<img align="left" id="a" src="C:\Users\alok2\OneDrive\Desktop\Website\Images\B.png" alt="Logo" height="70px"
 				width="70px">
 		</a>
 		<h1>Ideabox</h1>
 		</div>
 	</div><div class="nav">
-		<a href="file:///C:/Users/alok2/OneDrive/Desktop/Website/Website.html"> Home</a>
-		<a href="#Furniture">     Furniture        </a>
-		<a href="#About Us">      About Us       </a>
-		<a href="#Contact">        Contact Us    </a>
-		<a href="C:\Users\alok2\OneDrive\Desktop\Website\faq.html">FAQ</a>
+		<a href="index.html"> Home</a>
+		<a href="Furnitures.html">     Furniture        </a>
+		<a href="profcard.html">      About Us       </a>
+		<a href="contact.html">        Contact Us    </a>
+		<a href="#">FAQ</a>
 	  </div>
 		<h1>Frequently Asked Questions</h1>
 
