--- a/faq.html
+++ b/faq.html
@@ -78,7 +78,7 @@
 <body>
 	<div class="head">
 		<a href="index.html">
-			<img align="left" id="a" src="C:\Users\alok2\OneDrive\Desktop\Website\Images\B.png" alt="Logo" height="70px"
+			<img align="left" id="a" src="B.png" alt="Logo" height="70px"
 				width="70px">
 		</a>
 		<h1>Ideabox</h1>
