--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,13 @@
     .card {
       box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
       max-width: 400px;
-      max-height: 600px;;
+      max-height: 500px;;
       text-align: center;
       font-family: arial;
       color: black;
       background-color: white;
       margin-left: 40%;
-      margin-top: 20%;
+      margin-top: 10%;
     }
 
     .head {
@@ -26,6 +26,15 @@
       text-align: center;
       padding: 20px;
     }
+    .footer {
+        background-color: #333;
+        color: white;
+        text-align: center;
+        padding: 20px;
+        /* position: absolute; */
+        bottom: 0;
+        width: 100%;
+      }
 
     body {
       font-family: Arial, sans-serif;
@@ -96,6 +105,10 @@
       }
     </script>
   </div>
+    </div> <div class="footer">
+      <p id="About Us">Copyright &copy; Ideabox 2023</p>
+    </div>
+  
 </body>
 
 </html>
